--- a/css/screen.css
+++ b/css/screen.css
@@ -1,1 +1,42 @@
-add real css later
+<style>
+    li {
+      margin: 0 0 1em 0;
+    }
+    body {
+      background-color: #ffe;
+    }
+
+    h1 {
+
+      color: #333;
+      /* grayscale:0123456789abcdef*/
+      border: 2px dotted #333;
+        text-align: center;
+    }
+   section {
+     color: #333;
+border: 2px dashed #333;
+   }
+img {
+max-width: 100%;
+height: auto;
+align: center;
+display: block;
+margin: 0 auto;
+    }
+    body {
+max-width: 60em;
+padding: 0 1em;
+margin: 0 auto;
+}
+
+
+.info {
+padding-top: 1em;
+border-top: 1px solid #000;
+margin: 1em 0;
+}
+
+.info h2 {
+ margin-top: 0;
+}
